k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: do180
  name: do180
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: do180
