k8/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: do180
  name: do180
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: do180
    weight: 100
